--- a/Html/MapPage.html
+++ b/Html/MapPage.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-default" data-spy="affix" data-offset-top="130">
+    <nav class="navbar navbar-default"  >
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#" id="logo">
