--- a/TriMago/MapPage.html
+++ b/TriMago/MapPage.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-default" data-spy="affix" data-offset-top="130">
+    <nav class="navbar navbar-default"  >
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#" id="logo">
@@ -32,7 +32,7 @@
             <nav class="nav nav-pills" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html" id="homepage" class="navigationRight"> 首頁</a></li>
-                    <li><a href="https://www.facebook.com/ai.c.le.77" id="about" class="navigationRight"> 關於我們</a></li>
+                    <li><a href="AboutUs.html" id="about" class="navigationRight"> 關於我們</a></li>
                 </ul>
             </nav>
         </div>
