about us xsl completed

--- a/Html/AboutUs.html
+++ b/Html/AboutUs.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <title>找飯吃 ? TriMaGo</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css"/>
     <style>
         #leftSelection {
             min-height: 0px;
@@ -22,7 +22,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#" id="logo">
-                    <img src="https://imgur.com/download/8WZa7jf" alt="logo">
+                    <img src="https://imgur.com/download/8WZa7jf" alt="logo"/>
                 </a>
             </div>
             <nav class="nav nav-pills" id="myNavbar">
