完成 GoogleGeocoding 功能

--- a/TriMago/TestingResult.html
+++ b/TriMago/TestingResult.html
@@ -65,13 +65,7 @@
 </ul>
 </div>
 <div class="form-group">
-<label for="res-latitude">緯度:</label><input required="required" name="latitude" id="res-latitude" class="form-control" type="number">
-</div>
-<div class="form-group">
-<label for="res-longitude">經度:</label><input required="required" name="longitude" id="res-longitude" class="form-control" type="number">
-</div>
-<div class="form-group">
-<label for="res-address">地址:</label><input required="required" name="address" id="res-address" class="form-control" type="text">
+<label for="res-address">請輸入真實詳細地址:</label><input required="required" name="address" id="res-address" class="form-control" type="text">
 </div>
 <div class="form-group">
 <label for="res-avgprice">平均價格:</label><input required="required" name="price" id="res-avgprice" class="form-control" type="number">
@@ -297,74 +291,6 @@
 <p class="price">價位 40</p>
 <form method="get" action="detail">
 <input class="btn btn-success detailsButton" value="查看詳情" type="submit"><input name="id" value="r4" type="hidden">
-</form>
-</div>
-</div>
-</div>
-<div id="restaurantList" class="media">
-<div class="col-sm-5">
-<div class="media-left">
-<img style="width:250px" class="media-object" src="http://imgur.com/download/fKTtkuy"></div>
-</div>
-<div class="col-sm-7">
-<div class="media-body">
-<h1 class="media-heading">78978</h1>
-<div class="item__stars-wrp"></div>
-<p class="address">9</p>
-<p class="price">價位 454</p>
-<form method="get" action="detail">
-<input class="btn btn-success detailsButton" value="查看詳情" type="submit"><input name="id" value="r5" type="hidden">
-</form>
-</div>
-</div>
-</div>
-<div id="restaurantList" class="media">
-<div class="col-sm-5">
-<div class="media-left">
-<img style="width:250px" class="media-object" src="http://imgur.com/download/fKTtkuy"></div>
-</div>
-<div class="col-sm-7">
-<div class="media-body">
-<h1 class="media-heading">456</h1>
-<div class="item__stars-wrp"></div>
-<p class="address">5</p>
-<p class="price">價位 7</p>
-<form method="get" action="detail">
-<input class="btn btn-success detailsButton" value="查看詳情" type="submit"><input name="id" value="r6" type="hidden">
-</form>
-</div>
-</div>
-</div>
-<div id="restaurantList" class="media">
-<div class="col-sm-5">
-<div class="media-left">
-<img style="width:250px" class="media-object" src=""></div>
-</div>
-<div class="col-sm-7">
-<div class="media-body">
-<h1 class="media-heading">張書瑄開的餐廳</h1>
-<div class="item__stars-wrp"></div>
-<p class="address">張書瑄的腿</p>
-<p class="price">價位 520</p>
-<form method="get" action="detail">
-<input class="btn btn-success detailsButton" value="查看詳情" type="submit"><input name="id" value="r7" type="hidden">
-</form>
-</div>
-</div>
-</div>
-<div id="restaurantList" class="media">
-<div class="col-sm-5">
-<div class="media-left">
-<img style="width:250px" class="media-object" src="http://i.imgur.com/Yclc1R5.jpg"></div>
-</div>
-<div class="col-sm-7">
-<div class="media-body">
-<h1 class="media-heading">456</h1>
-<div class="item__stars-wrp"></div>
-<p class="address">5</p>
-<p class="price">價位 6</p>
-<form method="get" action="detail">
-<input class="btn btn-success detailsButton" value="查看詳情" type="submit"><input name="id" value="r8" type="hidden">
 </form>
 </div>
 </div>
