查詢列功能

--- a/TriMago/TestingResult.html
+++ b/TriMago/TestingResult.html
@@ -295,6 +295,23 @@
 </div>
 </div>
 </div>
+<div id="restaurantList" class="media">
+<div class="col-sm-5">
+<div class="media-left">
+<img style="width:250px" class="media-object" src="http://i.imgur.com/TLdTIMC.jpg"></div>
+</div>
+<div class="col-sm-7">
+<div class="media-body">
+<h1 class="media-heading">45</h1>
+<div class="item__stars-wrp"></div>
+<p class="address">桃園</p>
+<p class="price">價位 4</p>
+<form method="get" action="detail">
+<input class="btn btn-success detailsButton" value="查看詳情" type="submit"><input name="id" value="r5" type="hidden">
+</form>
+</div>
+</div>
+</div>
 </div>
 <div class="col-sm-2 sidenav">
 <div class="well">
