增加Google Custom Searching

--- a/TriMago/TestingResult.html
+++ b/TriMago/TestingResult.html
@@ -21,6 +21,16 @@
             return true;
           }
         </script>
+<style>  
+			.cse .gsc-search-button input.gsc-search-button-v2,
+			input.gsc-search-button-v2 {
+				height: 26px !important;
+				margin-top: 0 !important;
+				min-width: 13px !important;
+				padding: 5px 26px !important;
+				width: 68px !important;
+			}
+		</style>
 <div role="dialog" id="myModal" class="modal fade">
 <div class="modal-dialog">
 <div class="modal-content">
@@ -295,28 +305,20 @@
 </div>
 </div>
 </div>
-<div id="restaurantList" class="media">
-<div class="col-sm-5">
-<div class="media-left">
-<img style="width:250px" class="media-object" src="http://i.imgur.com/TLdTIMC.jpg"></div>
-</div>
-<div class="col-sm-7">
-<div class="media-body">
-<h1 class="media-heading">45</h1>
-<div class="item__stars-wrp"></div>
-<p class="address">桃園</p>
-<p class="price">價位 4</p>
-<form method="get" action="detail">
-<input class="btn btn-success detailsButton" value="查看詳情" type="submit"><input name="id" value="r5" type="hidden">
-</form>
-</div>
-</div>
-</div>
 </div>
 <div class="col-sm-2 sidenav">
-<div class="well">
-<p>ADS</p>
-</div>
+<script>
+				  (function() {
+					var cx = '016452915066670004559:xkj40c_fjrw';
+					var gcse = document.createElement('script');
+					gcse.type = 'text/javascript';
+					gcse.async = true;
+					gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+					var s = document.getElementsByTagName('script')[0];
+					s.parentNode.insertBefore(gcse, s);
+				  })();
+				</script>
+<div style="margin-bottom:8px;" class="gcse-search"></div>
 <div class="well">
 <p>ADS</p>
 </div>
